--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "axios": "^1.1.3",
+    "canvas-confetti": "^1.2.0",
+    "moment": "^2.29.4"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/canvas-confetti": "^1.0.0",
+    "@types/jquery": "^3.5.14",
     "@types/snowpack-env": "^2.3.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
