--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "esnext",
     "target": "esnext",
     "moduleResolution": "node",
+    "allowJs": true,
     "jsx": "preserve",
     "baseUrl": "./",
     /* paths - import rewriting/resolving */
