--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "dependencies": {
     "axios": "^1.1.3",
     "canvas-confetti": "^1.2.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/canvas-confetti": "^1.0.0",
     "@types/jquery": "^3.5.14",
+    "@types/react": "^18.0.21",
     "@types/snowpack-env": "^2.3.3",
     "prettier": "^2.2.1",
     "snowpack": "^3.3.7",
